fix <<and <head>

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html>
 <body>
 <head>
-<h1> Beibei's homepage </h1>
+<title> Beibei's homepage </title>
 </head>
   </body>
 </html>
