--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 
 <html>
-<body>
 <head>
-<title> Beibei's homepage </title>
+
+<title>Beibei's homepage</title>
+
 </head>
-  </body>
+  <body>
+    Major: journalism 
+    </body>
 </html>
