--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Beibei Liu's website for J4502.">
   <meta name="author" content="Beibei Liu">
   <meta name="keywords" content="Beibei Liu, contact, image"/>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Glory&family=Roboto+Slab:wght@400;700&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
