add font type lora

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="author" content="Beibei Liu">
   <meta name="keywords" content="Beibei Liu, contact, image"/>
   <link href="https://fonts.googleapis.com/css2?family=Glory&family=Roboto+Slab:wght@400;700&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
