add hamburger menu

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
 
 <body>
   <nav>
-    <ul>
+    <ul id="menu_nav">
       <li><a href="https://journalism.missouri.edu" target="_blank">The Journalism School of Missouri</a></li>
       <li><a href="work-samples.html">My jounalism work samples</a></li>
       <li><a href="https://www.ifengus.com/a/4886.html" target="_blank">Published Work</a></li>
       <li><a href="old-index.html">My old page</a></li>
   </ul>
+  <button id="menu_trigger">☰</button>
   </nav>
   <h1>Beibei Liu's webiste</h1>
   <h2>Contact Me</h2>
