--- a/index.html
+++ b/index.html
@@ -5,25 +5,28 @@
   <meta charset="utf-8">
 
   <title>Beibei's website</title>
-  <meta name="description" content="Beibei Liu's website for J4502.">
+  <meta name="description" content="Beibei Liu's website">
   <meta name="author" content="Beibei Liu">
-  <meta name="keywords" content="Beibei Liu, contact, image"/>
+  <meta name="keywords" content="Beibei Liu, journalism works"/>
   <link href="https://fonts.googleapis.com/css2?family=Glory&family=Roboto+Slab:wght@400;700&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+  <header>
+    <h1>Beibei Liu's webiste</h1>
   <nav>
     <ul id="menu_nav">
-      <li><a href="https://journalism.missouri.edu" target="_blank">The Journalism School of Missouri</a></li>
-      <li><a href="work-samples.html">My jounalism work samples</a></li>
-      <li><a href="https://www.ifengus.com/a/4886.html" target="_blank">Published Work</a></li>
-      <li><a href="old-index.html">My old page</a></li>
+      <li class="nav-content"><a href="index.html">Home</a></li>
+      <li class="nav-content"><a href="">Written Articles</a></li>
+      <li class="nav-content"><a href="" >Video&Audio</a></li>
+      <li class="nav-content"><a href="">Internship</a></li>
+      <li class="nav-content"><a href="">Resume</a></li>
   </ul>
   <button id="menu_trigger">☰</button>
   </nav>
-  <h1>Beibei Liu's webiste</h1>
+</header>
   <h2>Contact Me</h2>
   <p><a href="mailto:bl842@umsystem.edu">Email:bl842@umsystem.edu</a></p>
   <p>Phone:573-530-2132</p>
