--- a/index.html
+++ b/index.html
@@ -27,18 +27,19 @@
   <button id="menu_trigger">☰</button>
   </nav>
 </header>
-  <h2>Contact Me</h2>
+<section class="self-intro">
+  <a id="headshot" href="mailto:bl842@umsystem.edu">
+    <img src="IMG_2596.JPG" alt="Beibei Liu"/></a>
+<div class="text">
+  <p>Contact Me</p>
   <p><a href="mailto:bl842@umsystem.edu">Email:bl842@umsystem.edu</a></p>
   <p>Phone:573-530-2132</p>
-
-  <a href="mailto:bl842@umsystem.edu">
-    <img src="IMG_2596.JPG" alt="Beibei Liu"/>
-  </a>
-  <section>
-    <h2>Joke</h2>
-    <p>What do you call a bear without any teeth?</p>
-    <p>A gummy bear!</p>
-  </section>
+</div>
+</section>
+<footer>
+  <p id="copyright"> Copyright@2021Beibei Liu
+  </p>
+</footer>
 </body>
 <script src="main.js" type="text/javascript"></script>
 </html>
