--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   <nav>
     <ul id="menu_nav">
       <li class="nav-content"><a href="index.html">Home</a></li>
-      <li class="nav-content"><a href="">Written Articles</a></li>
-      <li class="nav-content"><a href="" >Video&Audio</a></li>
-      <li class="nav-content"><a href="">Internship</a></li>
-      <li class="nav-content"><a href="">Resume</a></li>
+      <li class="nav-content"><a href="written-stories.html">Written Articles</a></li>
+      <li class="nav-content"><a href="video-and-audio.html" >Video&Audio</a></li>
+      <li class="nav-content"><a href="internship.html">Internship</a></li>
+      <li class="nav-content"><a href="resume.html">Resume</a></li>
   </ul>
   <button id="menu_trigger">☰</button>
   </nav>
@@ -36,10 +36,10 @@
   <p>Phone:573-530-2132</p>
 </div>
 </section>
+</body>
 <footer>
   <p id="copyright"> Copyright@2021Beibei Liu
   </p>
 </footer>
-</body>
 <script src="main.js" type="text/javascript"></script>
 </html>
