--- a/internship.html
+++ b/internship.html
@@ -1,9 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>My Jounalism Work Samples</title>
+    <title>Internship</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Glory&family=Roboto+Slab:wght@400;700&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>My Jounalism Work Samples</h1>
+    <header>
+    <nav>
+      <ul id="menu_nav">
+        <li class="nav-content"><a href="index.html">Home</a></li>
+        <li class="nav-content"><a href="written-stories.html">Written Articles</a></li>
+        <li class="nav-content"><a href="video-and-audio.html" >Video&Audio</a></li>
+        <li class="nav-content"><a href="internship.html">Internship</a></li>
+        <li class="nav-content"><a href="resume.html">Resume</a></li>
+    </ul>
+    <button id="menu_trigger">☰</button>
+    </nav>
+    <h1>Internship</h1>
+  </header>
+
+  <section class="explanation">
+  <div class="text">
+    <h2 class="title">Enrollment Rate</h2>
+    <p>New international student enrollment in the United States and online outside the United States has decreased by 43 percent in Fall 2020. Many international students studying at U.S. institutions took advantage of opportunities to begin their studies remotely.</p>
+    <p><a href="https://www.iie.org/Research-and-Insights/Open-Doors/Fall-International-Enrollments-Snapshot-Reports">Source: The Power of International Education</a></p>
+  </div>
+  <div class="img1-div">
+    <img class="img1" src="43.jpeg" alt="International students enrollment fell 43% in 2020, while the year 2016-2019 saw decline within 6.6%.">
+  </div>
+</section>
+<section class="explanation">
+<div class="text">
+  <h2 class="title">Enrollment Rate</h2>
+  <p>New international student enrollment in the United States and online outside the United States has decreased by 43 percent in Fall 2020. Many international students studying at U.S. institutions took advantage of opportunities to begin their studies remotely.</p>
+  <p><a href="https://www.iie.org/Research-and-Insights/Open-Doors/Fall-International-Enrollments-Snapshot-Reports">Source: The Power of International Education</a></p>
+</div>
+<div class="img1-div">
+  <img class="img1" src="43.jpeg" alt="International students enrollment fell 43% in 2020, while the year 2016-2019 saw decline within 6.6%.">
+</div>
+</section>
+<section class="explanation">
+<div class="text">
+  <h2 class="title">Enrollment Rate</h2>
+  <p>New international student enrollment in the United States and online outside the United States has decreased by 43 percent in Fall 2020. Many international students studying at U.S. institutions took advantage of opportunities to begin their studies remotely.</p>
+  <p><a href="https://www.iie.org/Research-and-Insights/Open-Doors/Fall-International-Enrollments-Snapshot-Reports">Source: The Power of International Education</a></p>
+</div>
+<div class="img1-div">
+  <img class="img1" src="43.jpeg" alt="International students enrollment fell 43% in 2020, while the year 2016-2019 saw decline within 6.6%.">
+</div>
+</section>
   </body>
+  <footer>
+    <p id="copyright"> Copyright@2021Beibei Liu
+    </p>
+  </footer>
+  <script src="main.js" type="text/javascript"></script>
 </html>
