--- a/video-and-audio.html
+++ b/video-and-audio.html
@@ -1,9 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>My Jounalism Work Samples</title>
+    <title>Written stories</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Glory&family=Roboto+Slab:wght@400;700&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>My Jounalism Work Samples</h1>
-  </body>
-</html>
+    <header>
+    <nav>
+      <ul id="menu_nav">
+        <li class="nav-content"><a href="index.html">Home</a></li>
+        <li class="nav-content"><a href="written-stories.html">Written Articles</a></li>
+        <li class="nav-content"><a href="video-and-audio.html" >Video&Audio</a></li>
+        <li class="nav-content"><a href="internship.html">Internship</a></li>
+        <li class="nav-content"><a href="resume.html">Resume</a></li>
+    </ul>
+    <button id="menu_trigger">☰</button>
+    </nav>
+    <h1>Video&Audio</h1>
+  </header>
+  <section>
+<div class="video-section">
+    <main id="video-main">
+  <iframe  class="video-embed" width="500" height="315" src="https://www.youtube.com/embed/SQu95PnJ0SA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </main>
+  <div class="intro-video">
+    <p>xxxxxxxxxx</p>
+    <p>xxxxxxxxxx</p>
+  </div>
+</div>
+<div class="video-section">
+    <main id="video-main">
+  <iframe  class="video-embed" width="500" height="315" src="https://www.youtube.com/embed/SQu95PnJ0SA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </main>
+  <div class="intro-video">
+    <p>xxxxxxxxxx</p>
+    <p>xxxxxxxxxx</p>
+  </div>
+</div>
+<div class="video-section">
+    <main id="video-main">
+  <iframe  class="video-embed" width="500" height="315" src="https://www.youtube.com/embed/SQu95PnJ0SA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </main>
+  <div class="intro-video">
+    <p>xxxxxxxxxx</p>
+    <p>xxxxxxxxxx</p>
+  </div>
+</div>
+  </section>
+  <footer>
+    <p id="copyright"> Copyright@2021Beibei Liu
+    </p>
+  </footer>
+  <script src="main.js" type="text/javascript"></script>
+  </html>
