--- a/written-stories.html
+++ b/written-stories.html
@@ -1,9 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>My Jounalism Work Samples</title>
+    <title>Written stories</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Glory&family=Roboto+Slab:wght@400;700&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>My Jounalism Work Samples</h1>
+    <header>
+    <nav>
+      <ul id="menu_nav">
+        <li class="nav-content"><a href="index.html">Home</a></li>
+        <li class="nav-content"><a href="written-stories.html">Written Articles</a></li>
+        <li class="nav-content"><a href="video-and-audio.html" >Video&Audio</a></li>
+        <li class="nav-content"><a href="internship.html">Internship</a></li>
+        <li class="nav-content"><a href="resume.html">Resume</a></li>
+    </ul>
+    <button id="menu_trigger">☰</button>
+    </nav>
+    <h1>Written Stories</h1>
+  </header>
+  <section class="content">
+    <h2>headline</h2>
+    <p>short introduction<p>
+    <p>Published on the official website of the Phoenix North America Chinese Channel</P>
+    <p>text</p>
+  </section>
   </body>
+  <footer>
+    <p id="copyright"> Copyright@2021Beibei Liu
+    </p>
+  </footer>
+  <script src="main.js" type="text/javascript"></script>
 </html>
