add content on written stories

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <header>
-    <h1>Beibei Liu's webiste</h1>
+    <h1 id="home-hi">Hi,<br>I'm Beibei Liu</h1>
   <nav>
     <ul id="menu_nav">
       <li class="nav-content"><a href="index.html">Home</a></li>
@@ -31,7 +31,9 @@
   <a id="headshot" href="mailto:bl842@umsystem.edu">
     <img src="IMG_2596.JPG" alt="Beibei Liu"/></a>
 <div class="text">
-  <p>Contact Me</p>
+  <p>Hi, I’m Beibei Liu, a journalism student at the University of Missouri. Besides journalism, I also major in communication at the Communication University of China.
+  My interest area is cross-platform producing and editing, and I found my passion in news documentary producing. In the next year or two, I’ll be focused on visual storytelling and investigative reporting in graduate school.<p>
+  <p>Contact: </p>
   <p><a href="mailto:bl842@umsystem.edu">Email:bl842@umsystem.edu</a></p>
   <p>Phone:573-530-2132</p>
 </div>
