--- a/internship.html
+++ b/internship.html
@@ -22,7 +22,7 @@
   </header>
 
   <section class="explanation">
-  <div class="text">
+  <div class="text-intern">
     <h2 class="title">Enrollment Rate</h2>
     <p>New international student enrollment in the United States and online outside the United States has decreased by 43 percent in Fall 2020. Many international students studying at U.S. institutions took advantage of opportunities to begin their studies remotely.</p>
     <p><a href="https://www.iie.org/Research-and-Insights/Open-Doors/Fall-International-Enrollments-Snapshot-Reports">Source: The Power of International Education</a></p>
