--- a/written-stories.html
+++ b/written-stories.html
@@ -18,13 +18,39 @@
     </ul>
     <button id="menu_trigger">☰</button>
     </nav>
-    <h1>Written Stories</h1>
+    <h1 class="theme">Written Stories</h1>
   </header>
   <section class="content">
-    <h2>headline</h2>
-    <p>short introduction<p>
-    <p>Published on the official website of the Phoenix North America Chinese Channel</P>
-    <p>text</p>
+    <h2 class="text-title">Chinese Woman’s Efforts behind Missing Case of Mengqi Ji</h2>
+    <p class="author">By Beibei Liu / March 31, 2020<p>
+    <p class="author">Published on the official website of the <a href="https://ifengus.com/a/4886.html">Phoenix North America Chinese Channel</a></P>
+    <p>“It would be difficult for us to move a single step without your help,” said an old man, Mengqi Ji’s father.<br><br>
+In the early winter of 2019, the freezing wind in Missouri brought the missing case of Ji to the deadlock. When the one-month efforts turned out to be fruitless, Ji’s father solemnly bowed to the crowd in the prayer vigil for Ji.<br><br>
+Since the missing of Chinese woman Ji, her husband Joseph Elledge has been charged with first-degree murder in the disappearance of Ji and child abuse. However, the cases are still in progress. Ji’s parents and Elledge’s mother both seek the guardianship of their 1-year-old granddaughter, Anna Elledge.<br><br>
+“What we do, God always knows.” The familiar face of a Chinese woman showed up beside Ji’s father, translating his speech to the crowd. She also showed up outside the Boone County courthouse to support Ji’s parents. Dressed in all black with the printed slogan “Justice for Mengqi” on her clothes, she read the petition loudly with the Chinese community.<br><br>
+“You can always see her,” said Muzhen Li, a friend of this Chinese woman.<br><br>
+Ling Bunch, the woman showing up for every event, walked into the center of the bizarre missing case with her triple identities.<br><br>
+An empathetic mother<br><br>
+Bunch graduated from Jacksonville State University in Alabama and then met her husband when she went back to Hongkong in 1992. After getting married, she moved to the United States and had two children. Simple life in a quiet Missouri town gave her a simple character, “Crimes, drugs, shootings also happen here, but my life is far from these,” Bunch said, “I’m a mild person. I don’t care about politics, and I don’t care about the law.” However, a picture of young Chinese mothers helping Ji’s parents take care of their granddaughter caught her attention. Seeing Ji’s parents‘ cheerful faces when spending time with their granddaughter, Bunch decided to be an activist in the process of seeking  Ji and fighting for custody of Anna Elledge.<br><br>
+“I can feel that their world is collapsing into pieces,” Bunch sighed. “I also have a daughter.” Bunch is at the same age as Ji’s mother who is supposed to live a leisure retired life in China. “I think she is supposed to spend her time hanging out with friends or hiking after retire, but she doesn’t have a life now,” Bunch said.<br><br>
+The trial of Elledge’s charge of abusing the child is postponed to May after seven months since he was first charged. “Why the law system is so complicated?” Bunch was confused. “How can it be postponed so many times?” Bunch isn’t familiar with the judicial process, but she thinks there is enough physical evidence to prove the child abuse.<br><br>
+Besides, four-month waiting is torture for Ji’s parents, who almost lost the hope to find their daughter. They are consuming the deposit for covering lawsuits and housing expenses. However, they never expect the trip would be a forever split from their daughter.<br><br>
+Apart from her empathy for Ji’s parents, Bunch was also startled by Elledge’s mother’s “inappropriate behavior.” As police said in a news release, “Jean Elledge (Elledge’s mother) continues to withhold information from Mengqi’s parents and failed to inform them of the pending case for a guardianship of their granddaughter.” That was when she wanted to do “something big” for Ji’s parents to get the custody back.<br><br>
+A member of the Mid Missouri Association.<br><br>
+After being inspired by the young Chinese mothers, Bunch proposed a petition letter in the WeChat group of the Mid Missouri Chinese association. “Although many people agreed with the proposal, no one started to write the petition,” said Xiyang Li, the president of the Chinese Students and Scholars Association.<br><br>
+Bunch was the first person to write the petition to tell the judge that the Chinese community was willing to offer any help if Ji’s parents got custody. Her quick reaction got the first draft done, and Chinese members started to give suggestions and corrections subsequently. More than a hundred Chinese signed their names on the petition, attracting even more attention from local people and lawyers on social media.<br><br>
+“She is such a pragmatic person with a sense of responsibility.” Muzhen Li said. Finally, her efforts were recognized by Ji’s parents’ lawyer, and the petition letter was submitted to the courthouse. After two days of hearings, both sides agreed to a short arrangement where they share custody. Bunch said the justice was in favor of Ji’s mother in the following closed hearing, and Ji’s mother took care of Anna Elledge for a longer time than Jean Elledge now.  More details couldn’t be revealed because of the gag order.<br><br>
+“She never tells people what she has done. She just does everything quietly,” Muzhen Li said. Bunch, instead, downplayed what she has done and didn’t want the attention.<br><br>
+Behind her efforts, it’s a connected Chinese community.<br><br>
+Chinese students at the University of Missouri offered their cars to pick up Ji’s parents. Muzhen Li and her Chinese friends helped Ji’s parents buy flight tickets and find houses in Columbia. Many Chinese people voluntarily cooked meals for Ji’s parents until now, and people held a prayer vigil for Ji. Four Chinese restaurants voluntarily put up the notice of finding Ji. In the last seven months, many Chinese helped Ji’s parents settle down and find lawyers, although Ji’s parents were just strangers who were in trouble. “I feel like the Chinese community is like a backup for us,” Xiyang Li said.<br><br>
+However, the four-month wait and the coronavirus outbreak wore down the Chinese community and Ji’s parents. Their voice fell into the sea of law cases quietly and quickly.<br><br>
+An ordinary real estate agent<br><br>
+Outside the case of Ji, Bunch is just a real estate agent. Muzhen Li firstly met Bunch when she and her husband wanted a house in Columbia. “She is a reliable person of integrity,” Muzhen Li said. Bunch taught her how to choose houses from details “as a teacher”, so the trust bond was established between them gradually. Muzhen Li said she would trust every house and agent proved by Bunch because of her honesty and a sense of responsibility.<br><br>
+Bunch is a talkative person but never shows off her contribution, said Muzhen Li. She is willing to help others and patiently explain everything when anybody participates in an event.<br><br>
+Being silent but practical, Bunch left an impression of being a leader in all events, although she never bragged or trumpeted her efforts in the interview.<br><br>
+Bunch is an ordinary mother, a real estate agent, a member of Mid Missouri Chinese Association. Although ordinary as she is, she represents the group of Chinese people helping Ji without asking for anything in return. They are so ordinary, but empathetic, and bright.  “Appreciation is unnecessary. We know everything in heart,” Bunch said. However, she is combating with frustrating reality that the police lack financial support to seek Ji’s remains in the Lamine River. Elledge’s trial of murdering is arranged in June, but Ji’s family and friends worry that Elledge will not convict the crime without the proof of Ji’s body. Until now, Bunch is organizing the charity in Columbia, as the police need at least 500,000 dollars to find the remains.<br><br>
+The candles in prayer vigil burned from day to night, blurring the sorrow on Ji’s father’s face. “At last, my wife and I hope that our daughter Mengqi can come home sooner. My beloved granddaughter will,” he sobbed with grief, trying to control the trembling voice, “will have a safe future.” He walked to the crowd, folding his hands, and muttered to himself “Thank you, thank you, thank you.”<br><br>
+</p>
   </section>
   </body>
   <footer>
