add content to other pages

--- a/internship.html
+++ b/internship.html
@@ -18,39 +18,61 @@
     </ul>
     <button id="menu_trigger">☰</button>
     </nav>
-    <h1>Internship</h1>
+    <h1 class="theme">Internship</h1>
   </header>
+<section class="intern-body">
+   <h2 class="intern-title">China News Weekly<h2>
+   <p class="intern-author">Reporter<p>
+   <p class="intern-author">Online|Sep.2021-now</p>
+  <ul class="work-content">
+   <li>Pitch stories independently</li>
+   <li>Independently report stories, including reaching out to sources, collecting documents, doing interviews, and editing videos.</li>
+   <li>Publish works on China News Weekly’s social media account. </li>
+</ul>
 
-  <section class="explanation">
-  <div class="text-intern">
-    <h2 class="title">Enrollment Rate</h2>
-    <p>New international student enrollment in the United States and online outside the United States has decreased by 43 percent in Fall 2020. Many international students studying at U.S. institutions took advantage of opportunities to begin their studies remotely.</p>
-    <p><a href="https://www.iie.org/Research-and-Insights/Open-Doors/Fall-International-Enrollments-Snapshot-Reports">Source: The Power of International Education</a></p>
-  </div>
-  <div class="img1-div">
-    <img class="img1" src="43.jpeg" alt="International students enrollment fell 43% in 2020, while the year 2016-2019 saw decline within 6.6%.">
-  </div>
+   <h2 class="intern-title">Xinhua News Agency<h2>
+   <p class="intern-author">English News Editor<p>
+   <p class="intern-author">Online|Mar.2021-June 2021</p>
+   <ul class="work-content">
+   <li>Translated and proofread video copywriting of the Red Boat: CPC Founding Story, a joint AR product with Baidu</li>
+   <li>Edited news script released on Xinhua News App, including proofreading, typesetting, and titling</li>
+   <li>Made news gallery, wrote captions, selected and edited pictures from Xinhua’s Nonprofessional Photographer Project </li>
+</ul>
+
+<h2 class="intern-title">Beijing News<h2>
+<p class="intern-author">News Editor<p>
+<p class="intern-author">Beijing,China|Oct.2020-Jan.2021</p>
+<ul class="work-content">
+<li>Organized, prepared and executed street interview of Foreigners in Beijing: How was your 2020?</li>
+<li>Followed critical media at home and abroad, tracked latest trending stories and produced follow-up reports</li>
+<li>Independently compiled video scripts, cooperated with video editors and produced news videos</li>
+</ul>
+
+<h2 class="intern-title">China Global Television Network (CGTN)<h2>
+<p class="intern-author">Social Media Editor<p>
+<p class="intern-author">Beijing,China|Sep.2020</p>
+<ul class="work-content">
+<li>Proofread and typeset materials needed for the personal website of CGTN host Guan Wang (a famous news anchor and correspondent covering China-U.S. relations)</li>
+<li>Assisted in the planning of interview programs of the documentary The Frontline: China’s Fight Against COVID-19</li>
+</ul>
+
+<h2 class="intern-title">Shanghai Media Group<h2>
+<p class="intern-author">TV Editor<p>
+<p class="intern-author">Shanghai,China|June 2020-Aug.2020</p>
+<ul class="work-content">
+<li>Originated ideas and topics for the TV program China Now by collecting and sorting out hot issues at home and abroad</li>
+<li>Participated in live recording and execution, worked with the director and video editor to assemble the final product</li>
+</ul>
+
+<h2 class="intern-title">Phoenix TV – U.S.<h2>
+<p class="intern-author">Reporter<p>
+<p class="intern-author">Irwindale CA|July 2018</p>
+<ul class="work-content">
+<li>Co-produced an eight-minute feature news video on the development of Ontario Airport in L.A.</li>
+<li>Wrote news scripts and participated in interviews with the mayor of Walnut and the sheriff of San Bernardino County</li>
+</ul>
 </section>
-<section class="explanation">
-<div class="text">
-  <h2 class="title">Enrollment Rate</h2>
-  <p>New international student enrollment in the United States and online outside the United States has decreased by 43 percent in Fall 2020. Many international students studying at U.S. institutions took advantage of opportunities to begin their studies remotely.</p>
-  <p><a href="https://www.iie.org/Research-and-Insights/Open-Doors/Fall-International-Enrollments-Snapshot-Reports">Source: The Power of International Education</a></p>
-</div>
-<div class="img1-div">
-  <img class="img1" src="43.jpeg" alt="International students enrollment fell 43% in 2020, while the year 2016-2019 saw decline within 6.6%.">
-</div>
-</section>
-<section class="explanation">
-<div class="text">
-  <h2 class="title">Enrollment Rate</h2>
-  <p>New international student enrollment in the United States and online outside the United States has decreased by 43 percent in Fall 2020. Many international students studying at U.S. institutions took advantage of opportunities to begin their studies remotely.</p>
-  <p><a href="https://www.iie.org/Research-and-Insights/Open-Doors/Fall-International-Enrollments-Snapshot-Reports">Source: The Power of International Education</a></p>
-</div>
-<div class="img1-div">
-  <img class="img1" src="43.jpeg" alt="International students enrollment fell 43% in 2020, while the year 2016-2019 saw decline within 6.6%.">
-</div>
-</section>
+
   </body>
   <footer>
     <p id="copyright"> Copyright@2021Beibei Liu
