--- a/internship.html
+++ b/internship.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Internship</title>
+    <title>Experience</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Glory&family=Roboto+Slab:wght@400;700&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap" rel="stylesheet">
-  </head>
+<link href="https://fonts.googleapis.com/css2?family=Domine:wght@700&family=Roboto+Condensed&family=Source+Sans+Pro&display=swap" rel="stylesheet">  </head>
   <body>
     <header>
     <nav>
@@ -13,7 +11,7 @@
         <li class="nav-content"><a href="index.html">Home</a></li>
         <li class="nav-content"><a href="written-stories.html">Written Articles</a></li>
         <li class="nav-content"><a href="video-and-audio.html" >Video&Audio</a></li>
-        <li class="nav-content"><a href="internship.html">Internship</a></li>
+        <li class="nav-content"><a href="internship.html">Experience</a></li>
         <li class="nav-content"><a href="resume.html">Resume</a></li>
     </ul>
     <button id="menu_trigger">☰</button>
@@ -21,55 +19,55 @@
     <h1 class="theme">Internship</h1>
   </header>
 <section class="intern-body">
-   <h2 class="intern-title">China News Weekly<h2>
+   <h2 class="intern-title">China News Weekly</h2>
    <p class="intern-author">Reporter<p>
    <p class="intern-author">Online|Sep.2021-now</p>
   <ul class="work-content">
-   <li>Pitch stories independently</li>
-   <li>Independently report stories, including reaching out to sources, collecting documents, doing interviews, and editing videos.</li>
-   <li>Publish works on China News Weekly’s social media account. </li>
+   <li class="mengqi">Pitch stories independently</li>
+   <li class="mengqi">Independently report stories, including reaching out to sources, collecting documents, doing interviews, and editing videos.</li>
+   <li class="mengqi">Publish works on China News Weekly’s social media account. </li>
 </ul>
 
-   <h2 class="intern-title">Xinhua News Agency<h2>
+   <h2 class="intern-title">Xinhua News Agency</h2>
    <p class="intern-author">English News Editor<p>
    <p class="intern-author">Online|Mar.2021-June 2021</p>
    <ul class="work-content">
-   <li>Translated and proofread video copywriting of the Red Boat: CPC Founding Story, a joint AR product with Baidu</li>
-   <li>Edited news script released on Xinhua News App, including proofreading, typesetting, and titling</li>
-   <li>Made news gallery, wrote captions, selected and edited pictures from Xinhua’s Nonprofessional Photographer Project </li>
+   <li class="mengqi">Translated and proofread video copywriting of the Red Boat: CPC Founding Story, a joint AR product with Baidu</li>
+   <li class="mengqi">Edited news script released on Xinhua News App, including proofreading, typesetting, and titling</li>
+   <li class="mengqi">Made news gallery, wrote captions, selected and edited pictures from Xinhua’s Nonprofessional Photographer Project </li>
 </ul>
 
-<h2 class="intern-title">Beijing News<h2>
+<h2 class="intern-title">Beijing News</h2>
 <p class="intern-author">News Editor<p>
 <p class="intern-author">Beijing,China|Oct.2020-Jan.2021</p>
 <ul class="work-content">
-<li>Organized, prepared and executed street interview of Foreigners in Beijing: How was your 2020?</li>
-<li>Followed critical media at home and abroad, tracked latest trending stories and produced follow-up reports</li>
-<li>Independently compiled video scripts, cooperated with video editors and produced news videos</li>
+<li class="mengqi">Organized, prepared and executed street interview of Foreigners in Beijing: How was your 2020?</li>
+<li class="mengqi">Followed critical media at home and abroad, tracked latest trending stories and produced follow-up reports</li>
+<li class="mengqi">Independently compiled video scripts, cooperated with video editors and produced news videos</li>
 </ul>
 
-<h2 class="intern-title">China Global Television Network (CGTN)<h2>
+<h2 class="intern-title">China Global Television Network (CGTN)</h2>
 <p class="intern-author">Social Media Editor<p>
 <p class="intern-author">Beijing,China|Sep.2020</p>
 <ul class="work-content">
-<li>Proofread and typeset materials needed for the personal website of CGTN host Guan Wang (a famous news anchor and correspondent covering China-U.S. relations)</li>
-<li>Assisted in the planning of interview programs of the documentary The Frontline: China’s Fight Against COVID-19</li>
+<li class="mengqi">Proofread and typeset materials needed for the personal website of CGTN host Guan Wang (a famous news anchor and correspondent covering China-U.S. relations)</li>
+<li class="mengqi">Assisted in the planning of interview programs of the documentary The Frontline: China’s Fight Against COVID-19</li>
 </ul>
 
-<h2 class="intern-title">Shanghai Media Group<h2>
+<h2 class="intern-title">Shanghai Media Group</h2>
 <p class="intern-author">TV Editor<p>
 <p class="intern-author">Shanghai,China|June 2020-Aug.2020</p>
 <ul class="work-content">
-<li>Originated ideas and topics for the TV program China Now by collecting and sorting out hot issues at home and abroad</li>
-<li>Participated in live recording and execution, worked with the director and video editor to assemble the final product</li>
+<li class="mengqi">Originated ideas and topics for the TV program China Now by collecting and sorting out hot issues at home and abroad</li>
+<li class="mengqi">Participated in live recording and execution, worked with the director and video editor to assemble the final product</li>
 </ul>
 
-<h2 class="intern-title">Phoenix TV – U.S.<h2>
+<h2 class="intern-title">Phoenix TV – U.S.</h2>
 <p class="intern-author">Reporter<p>
 <p class="intern-author">Irwindale CA|July 2018</p>
 <ul class="work-content">
-<li>Co-produced an eight-minute feature news video on the development of Ontario Airport in L.A.</li>
-<li>Wrote news scripts and participated in interviews with the mayor of Walnut and the sheriff of San Bernardino County</li>
+<li class="mengqi">Co-produced an eight-minute feature news video on the development of Ontario Airport in L.A.</li>
+<li class="mengqi">Wrote news scripts and participated in interviews with the mayor of Walnut and the sheriff of San Bernardino County</li>
 </ul>
 </section>
 
