--- a/resume.html
+++ b/resume.html
@@ -3,9 +3,7 @@
   <head>
     <title>Resume</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Glory&family=Roboto+Slab:wght@400;700&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap" rel="stylesheet">
-  </head>
+<link href="https://fonts.googleapis.com/css2?family=Domine:wght@700&family=Roboto+Condensed&family=Source+Sans+Pro&display=swap" rel="stylesheet">  </head>
   <body>
     <header>
     <nav>
@@ -13,14 +11,15 @@
         <li class="nav-content"><a href="index.html">Home</a></li>
         <li class="nav-content"><a href="written-stories.html">Written Articles</a></li>
         <li class="nav-content"><a href="video-and-audio.html" >Video&Audio</a></li>
-        <li class="nav-content"><a href="internship.html">Internship</a></li>
+        <li class="nav-content"><a href="internship.html">Experience</a></li>
         <li class="nav-content"><a href="resume.html">Resume</a></li>
     </ul>
     <button id="menu_trigger">☰</button>
     </nav>
-    <h1>Resume</h1>
+    <h1 class="theme">Resume</h1>
   </header>
-
+  <img id="resume" src="resume-cover.png" alt="cover of Beibei's resume">
+  <p class="download">click <a class="download" href="resume.pdf">here</a> to download</p>
   </body>
   <footer>
     <p id="copyright"> Copyright@2021Beibei Liu
