--- a/video-and-audio.html
+++ b/video-and-audio.html
@@ -3,9 +3,7 @@
   <head>
     <title>Written stories</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Glory&family=Roboto+Slab:wght@400;700&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap" rel="stylesheet">
-  </head>
+<link href="https://fonts.googleapis.com/css2?family=Domine:wght@700&family=Roboto+Condensed&family=Source+Sans+Pro&display=swap" rel="stylesheet">  </head>
   <body>
     <header>
     <nav>
@@ -13,7 +11,7 @@
         <li class="nav-content"><a href="index.html">Home</a></li>
         <li class="nav-content"><a href="written-stories.html">Written Articles</a></li>
         <li class="nav-content"><a href="video-and-audio.html" >Video&Audio</a></li>
-        <li class="nav-content"><a href="internship.html">Internship</a></li>
+        <li class="nav-content"><a href="internship.html">Experience</a></li>
         <li class="nav-content"><a href="resume.html">Resume</a></li>
     </ul>
     <button id="menu_trigger">☰</button>
@@ -26,29 +24,29 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/TFzf6pA--J4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
    </main>
   <div class="intro-video">
-    <h2 class="text-title">International students’ involvement in the campus during the pandemic</h2>
+    <h2 class="text-title">International Students’ Involvement in Campus During Pandemic</h2>
     <p class="author">By Beibei Liu / Oct.15, 2021</p>
-    <p>The story looks into how international students across Columbia are struggling to get involved at varying degrees, and what is Mizzou/college faculty doing to support international students. We would look at what these students do to build community despite the normal challenges of being an international student in addition to COVID-19.</p>
+    <p class="mengqi">The story looks into how international students across Columbia are struggling to get involved at varying degrees, and what is Mizzou/college faculty doing to support international students. We would look at what these students do to build community despite the normal challenges of being an international student in addition to COVID-19.</p>
   </div>
 
       <main id="video-main">
 <iframe width="560" height="315" frameborder="0" src="https://v.qq.com/txp/iframe/player.html?vid=u3216tlu2p3" allowFullScreen="true"></iframe>
      </main>
     <div class="intro-video">
-      <h2 class="text-title">Foreigners in Beijing: How was your 2020?</h2>
+      <h2 class="text-title">Foreigners in Beijing: How Was Your 2020?</h2>
       <p class="author">By Beibei Liu, Lushuang Hu, Yiru Chen, Yuzhi Wu, Minghui Li, Jinsong Yu / Nov.27, 2020</p>
       <p class="author">Published on Beijing News channel on Tencent Video
-      <p>We interview 19 foreigners in Beijing to talk about their 2020. The year saw the outbreak of COVID-19, the death of Kobe Bryant, the mountain fire in Australia…… It was a crazy year for many people. Foreigners in Beijing witnesses the first outbreak of public health crisis and didn’t come home due to the lockdown. They had a lot to say after going through the year.</p>
+      <p class="mengqi">We interview 19 foreigners in Beijing to talk about their 2020. The year saw the outbreak of COVID-19, the death of Kobe Bryant, the mountain fire in Australia…… It was a crazy year for many people. Foreigners in Beijing witnesses the first outbreak of public health crisis and didn’t come home due to the lockdown. They had a lot to say after going through the year.</p>
     </div>
 
         <main id="video-main">
     <iframe width="560" height="315" frameborder="0" src="https://www.ixigua.com/iframe/7030428091759460897?autoplay=0" referrerpolicy="unsafe-url" allowfullscreen></iframe>
   </main>
       <div class="intro-video">
-        <h2 class="text-title">Hard to get loan for minority-owned business in Columbia</h2>
+        <h2 class="text-title"> Minority-owned Business in Columbia:Hard to Get Loan</h2>
         <p class="author">By Beibei Liu / Nov.14, 2021</p>
         <p class="author">Published on China News Weekly channel on TouTiao.com</p>
-        <p>The story looks into how international students across Columbia are struggling to get involved at varying degrees, and what is Mizzou/college faculty doing to support international students. We would look at what these students do to build community despite the normal challenges of being an international student in addition to COVID-19.</p>
+        <p class="mengqi">The story looks into how international students across Columbia are struggling to get involved at varying degrees, and what is Mizzou/college faculty doing to support international students. We would look at what these students do to build community despite the normal challenges of being an international student in addition to COVID-19.</p>
       </div>
 
 
@@ -56,8 +54,8 @@
      <div class="intro-video">
       <h2 class="text-title">Health Eating in Columbia</h2>
       <p class="author">By Beibei Liu, Sydney Marino, Makalah Hardy, Kate Lewis / December,2019</p>
-      <p class="author">The full story is <a href="https://mghkr9.wixsite.com/j2150finalproject">here</a></p>
-      <p>You can see the lack of care for healthier options in our world today while communities build more fast food places and less farmers markets or organic restaurants. People have gotten the healthier way of life wrong and need to start understanding that eating healthier is a lifestyle choice that everyone, no matter their financial state, can make work.</p>
+      <p class="author">The full story is <a class="download" href="https://mghkr9.wixsite.com/j2150finalproject">here</a></p>
+      <p class="mengqi">You can see the lack of care for healthier options in our world today while communities build more fast food places and less farmers markets or organic restaurants. People have gotten the healthier way of life wrong and need to start understanding that eating healthier is a lifestyle choice that everyone, no matter their financial state, can make work.</p>
     </div>
   </section>
 
