--- a/written-stories.html
+++ b/written-stories.html
@@ -3,9 +3,7 @@
   <head>
     <title>Written stories</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Glory&family=Roboto+Slab:wght@400;700&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap" rel="stylesheet">
-  </head>
+<link href="https://fonts.googleapis.com/css2?family=Domine:wght@700&family=Roboto+Condensed&family=Source+Sans+Pro&display=swap" rel="stylesheet">
   <body>
     <header>
     <nav>
@@ -13,7 +11,7 @@
         <li class="nav-content"><a href="index.html">Home</a></li>
         <li class="nav-content"><a href="written-stories.html">Written Articles</a></li>
         <li class="nav-content"><a href="video-and-audio.html" >Video&Audio</a></li>
-        <li class="nav-content"><a href="internship.html">Internship</a></li>
+        <li class="nav-content"><a href="internship.html">Experience</a></li>
         <li class="nav-content"><a href="resume.html">Resume</a></li>
     </ul>
     <button id="menu_trigger">☰</button>
@@ -23,8 +21,8 @@
   <section class="content">
     <h2 class="text-title">Chinese Woman’s Efforts behind Missing Case of Mengqi Ji</h2>
     <p class="author">By Beibei Liu / March 31, 2020<p>
-    <p class="author">Published on the official website of the <a href="https://ifengus.com/a/4886.html">Phoenix North America Chinese Channel</a></P>
-    <p>“It would be difficult for us to move a single step without your help,” said an old man, Mengqi Ji’s father.<br><br>
+    <p class="author">Published on the official website of the <a class="download" href="https://ifengus.com/a/4886.html">Phoenix North America Chinese Channel</a></P>
+    <p class="mengqi">“It would be difficult for us to move a single step without your help,” said an old man, Mengqi Ji’s father.<br><br>
 In the early winter of 2019, the freezing wind in Missouri brought the missing case of Ji to the deadlock. When the one-month efforts turned out to be fruitless, Ji’s father solemnly bowed to the crowd in the prayer vigil for Ji.<br><br>
 Since the missing of Chinese woman Ji, her husband Joseph Elledge has been charged with first-degree murder in the disappearance of Ji and child abuse. However, the cases are still in progress. Ji’s parents and Elledge’s mother both seek the guardianship of their 1-year-old granddaughter, Anna Elledge.<br><br>
 “What we do, God always knows.” The familiar face of a Chinese woman showed up beside Ji’s father, translating his speech to the crowd. She also showed up outside the Boone County courthouse to support Ji’s parents. Dressed in all black with the printed slogan “Justice for Mengqi” on her clothes, she read the petition loudly with the Chinese community.<br><br>
