--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   <meta name="description" content="Beibei Liu's website">
   <meta name="author" content="Beibei Liu">
   <meta name="keywords" content="Beibei Liu, journalism works"/>
-  <link href="https://fonts.googleapis.com/css2?family=Glory&family=Roboto+Slab:wght@400;700&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Domine:wght@700&family=Roboto+Condensed&family=Source+Sans+Pro&display=swap" rel="stylesheet">  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -21,7 +19,7 @@
       <li class="nav-content"><a href="index.html">Home</a></li>
       <li class="nav-content"><a href="written-stories.html">Written Articles</a></li>
       <li class="nav-content"><a href="video-and-audio.html" >Video&Audio</a></li>
-      <li class="nav-content"><a href="internship.html">Internship</a></li>
+      <li class="nav-content"><a href="internship.html">Experience</a></li>
       <li class="nav-content"><a href="resume.html">Resume</a></li>
   </ul>
   <button id="menu_trigger">☰</button>
