add style sheet to index.htnl

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Beibei Liu's website">
   <meta name="author" content="Beibei Liu">
   <meta name="keywords" content="Beibei Liu, journalism works"/>
+    <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css2?family=Domine:wght@700&family=Roboto+Condensed&family=Source+Sans+Pro&display=swap" rel="stylesheet">  <link rel="stylesheet" href="style.css">
 </head>
 
