--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
       <ul id="menu_nav">
         <li class="nav-content"><a href="index.html">Home</a></li>
         <li class="nav-content"><a href="written-stories.html">Written Articles</a></li>
-        <li class="nav-content"><a href="video-and-audio.html" >Video&Audio</a></li>
+        <li class="nav-content"><a href="video-and-audio.html" >Video&Audio&photo</a></li>
         <li class="nav-content"><a href="internship.html">Experience</a></li>
         <li class="nav-content"><a href="resume.html">Resume</a></li>
     </ul>
@@ -18,7 +18,7 @@
     </nav>
     <h1 class="theme">Resume</h1>
   </header>
-  <img id="resume" src="resume-cover.png" alt="cover of Beibei's resume">
+  <img id="resume" src="beibei-resume.png" alt="cover of Beibei's resume">
   <p class="download">click <a class="download" href="resume.pdf">here</a> to download</p>
   </body>
   <footer>
