--- a/video-and-audio.html
+++ b/video-and-audio.html
@@ -10,7 +10,7 @@
       <ul id="menu_nav">
         <li class="nav-content"><a href="index.html">Home</a></li>
         <li class="nav-content"><a href="written-stories.html">Written Articles</a></li>
-        <li class="nav-content"><a href="video-and-audio.html" >Video&Audio</a></li>
+        <li class="nav-content"><a href="video-and-audio.html" >Video&Audio&photo</a></li>
         <li class="nav-content"><a href="internship.html">Experience</a></li>
         <li class="nav-content"><a href="resume.html">Resume</a></li>
     </ul>
