--- a/written-stories.html
+++ b/written-stories.html
@@ -10,15 +10,28 @@
       <ul id="menu_nav">
         <li class="nav-content"><a href="index.html">Home</a></li>
         <li class="nav-content"><a href="written-stories.html">Written Articles</a></li>
-        <li class="nav-content"><a href="video-and-audio.html" >Video&Audio</a></li>
+        <li class="nav-content"><a href="video-and-audio.html" >Video&Audio&photo</a></li>
         <li class="nav-content"><a href="internship.html">Experience</a></li>
         <li class="nav-content"><a href="resume.html">Resume</a></li>
     </ul>
     <button id="menu_trigger">☰</button>
     </nav>
-    <h1 class="theme">Written Stories</h1>
+    <h1 class="theme">Written Stories & photo</h1>
   </header>
   <section class="content">
+   <div class="intro-video">
+    <h2 class="text-title">Medical marijuana licenses in Missouri are being used for mental health benefits</h2>
+    <p class="author">By Beibei Liu, Isabella Ledonne, Xinyi Luo / Dec.20,2021</p>
+    <p class="author">The full story is <a class="download" href="https://www.columbiamissourian.com/special_section/cannabusiness/medical-marijuana-licenses-in-missouri-are-being-used-for-mental-health-benefits/article_9609eb32-5c61-11ec-a7e7-7f1ea3945c38.html">here</a></p>
+    <p class="mengqi">Medical marijuana sales in Missouri are above $200 million since its legalization in October 2020. Nearly 17% of medical marijuana cards in Missouri are for mental health purposes, like depression, anxiety and PTSD.</p>
+  </div>
+
+  <div class="intro-video">
+  <h2 class="text-title">Local art, history needs local help</h2>
+  <p class="author">By Beibei Liu, Lauren Hines, Emma Keady, Taylor Schmitt / Dec.20,2021</p>
+  <p class="author">The full story is <a class="download" href="https://www.voxmagazine.com/arts/art/local-art-history-needs-local-help/article_11dc0044-7e20-11ec-8868-d7db070f0607.html">here</a></p>
+  <p class="mengqi">Nearly two years after the start of the pandemic, local museums and art galleries are still experiencing the impact of COVID-19. Many have seen a steady rise in attendance and art sales, but all are struggling to have their volunteers safely return.</p>
+  </div>
     <h2 class="text-title">Chinese Woman’s Efforts behind Missing Case of Mengqi Ji</h2>
     <p class="author">By Beibei Liu / March 31, 2020<p>
     <p class="author">Published on the official website of the <a class="download" href="https://ifengus.com/a/4886.html">Phoenix North America Chinese Channel</a></P>
