--- a/internship.html
+++ b/internship.html
@@ -10,7 +10,7 @@
       <ul id="menu_nav">
         <li class="nav-content"><a href="index.html">Home</a></li>
         <li class="nav-content"><a href="written-stories.html">Written Articles</a></li>
-        <li class="nav-content"><a href="video-and-audio.html" >Video&Audio</a></li>
+        <li class="nav-content"><a href="video-and-audio.html" >Video&Audio&photo</a></li>
         <li class="nav-content"><a href="internship.html">Experience</a></li>
         <li class="nav-content"><a href="resume.html">Resume</a></li>
     </ul>
@@ -19,6 +19,21 @@
     <h1 class="theme">Internship</h1>
   </header>
 <section class="intern-body">
+  <h2 class="intern-title">Columbia Missourian</h2>
+  <p class="intern-author">Copy Editor<p>
+  <p class="intern-author">Columbia,MO|Jan.2022-Present</p>
+  <ul class="work-content">
+  <li class="mengqi">Checked AP style, punctuation, style and facts of news stories.</li>
+  </ul>
+
+  <h2 class="intern-title">KBIA (A National Public Radio-member station)</h2>
+  <p class="intern-author">Assistant Producer<p>
+  <p class="intern-author">Columbia,MO|Jan.2022-Present</p>
+  <ul class="work-content">
+  <li class="mengqi">Conducted interviews with Missouri residents.</li>
+  <li class="mengqi">Edited audio pieces for Missouri on Mic program.</li>
+  </ul>
+
    <h2 class="intern-title">China News Weekly</h2>
    <p class="intern-author">Reporter<p>
    <p class="intern-author">Online|Sep.2021-now</p>
